Added clearing old rooms and searches, added sending mail to user when added room matches searched room by user